--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <HEAD>
 
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=ÂÀØÀÑÑÛËÊÀÈÇÏÓÍÊÒÀ 2">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://bongacams2.com/track?c=606620 2">
 
 </HEAD>
 
